--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,22 +36,6 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0M4 Build - ?th September 2003
-<br>Project org.eclipse.jdt.core v_371
-(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_370">cvs</a>).
-<h2>
-What's new in this drop</h2>
-<ul>
-</li>
-</ul>
-
-<h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43116">43116</a>
-NPE copy and pasting a method
-
-<p><hr><h1>
-Eclipse Platform Build Notes&nbsp;<br>
-Java Development Tooling Core</h1>
 Eclipse SDK 3.0M4 Build - 15th September 2003
 <br>Project org.eclipse.jdt.core v_370 
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_370">cvs</a>).
@@ -62,7 +46,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43089">43089</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43116">43116</a>
+NPE copy and pasting a method
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43089">43089</a>
 Search engine doesn't report all matches
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43080">43080</a>
 NPE when searching in CU with incomplete method declaration 
