--- a/www/documentation/dev.html
+++ b/www/documentation/dev.html
@@ -1,4 +1,4 @@
-<!-- $Id: dev.html,v 1.26 2003/09/06 12:06:49 linus Exp $ -->
+<!-- $Id: dev.html,v 1.27 2003/09/15 21:00:20 linus Exp $ -->
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -17,10 +17,11 @@
 <td width="50%">
 <h3>Project documents</h3>
 <ul>
+  <li> <a href="/project.html">About</a> the project
   <li> <a href="/vision.html">Vision for ArgoUML</a>
   <li> <a href="defaulthtml/cookbook/ch03.html">Requirements</a>
 	(Cookbook chapter 3).
-  <li> <a href="/project.html">Contribute</a> to the project
+  <li> <a href="/terminology.html">Terminology</a> of the project
   <li> <a href="defaulthtml/cookbook/ch09.html">Coding standards</a>
 	(Cookbook chapter 9).
   <li> <a href="/jobjar.html">ArgoUML JobJar</a> 
