--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,8 +36,8 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0M4 Build - ?th September 2003
-<br>Project org.eclipse.jdt.core v_371 
+Eclipse SDK 3.0M4 Build - 16th September 2003
+<br>Project org.eclipse.jdt.core v_370 
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_370">cvs</a>).
 <h2>
 What's new in this drop</h2>
@@ -50,21 +50,7 @@ What's new in this drop</h2>
 Running jdt/core tests on Linux is failing
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43045">43045</a>
 Copy/move of package fragments with read-only subpackages fails on Linux
-
-<p><hr><h1>
-Eclipse Platform Build Notes&nbsp;<br>
-Java Development Tooling Core</h1>
-Eclipse SDK 3.0M4 Build - 15th September 2003
-<br>Project org.eclipse.jdt.core v_370 
-(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_370">cvs</a>).
-<h2>
-What's new in this drop</h2>
-<ul>
-</li>
-</ul>
-
-<h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43116">43116</a>
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43116">43116</a>
 NPE copy and pasting a method
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43089">43089</a>
 Search engine doesn't report all matches
