--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,13 +36,26 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
+Eclipse SDK 3.0M4 Build - ?th September 2003
+<br>Project org.eclipse.jdt.core v_371
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_371">cvs</a>).
+<h2>
+What's new in this drop</h2>
+<ul>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
 Eclipse SDK 3.0M4 Build - 16th September 2003
 <br>Project org.eclipse.jdt.core v_370 
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_370">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
-</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
