background autobuild support

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -64,7 +64,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42281">42281</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38931">38931</a>
+Migrate delta processor to comply to new notification scheme in 3.0
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42281">42281</a>
 "Resource *.java does not exist"
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38931">38931</a>
 org.eclipse.jdt.internal.corext.dom.NodeFinder needed in API 
