Updated to account for John McNally's copy_move_specification document.
Reviewed by Elicia.

--- a/www/usemodels/usecases/IssueMoveAndCopy/CopyDifferentModule.html
+++ b/www/usemodels/usecases/IssueMoveAndCopy/CopyDifferentModule.html
@@ -28,7 +28,10 @@
       All source artifact attributes remain unchanged.<br/>
       Artifact copy exists in the target.<br/>
       The following are duplicated in target artifact: shared attributes, artifact ID, creation date, created by, history, comments, attachments, dependencies, URLs.<br/>
-      All other attributes have been mapped to target artifact attributes or entered as a comment in the target artifact.</td>
+      All other attributes have been mapped to target artifact attributes or entered as a comment in the target artifact.<br/>
+      Users associated to source artifact without required target module permissions are noted as a comment in target artifact.<br/>
+      Users associated to source artifact with required target module permissions are associated appropriately.
+ </td>
 </tr>
 <tr valign="top">
   <td><strong>Trigger event:</strong></td>
