--- a/www/usemodels/usecases/IssueMoveAndCopy/CopySameModule.html
+++ b/www/usemodels/usecases/IssueMoveAndCopy/CopySameModule.html
@@ -4,7 +4,7 @@
   <td>Any user</tr>
 <tr valign="top">
   <td><strong>Goal in context:</strong></td>
-  <td>Copy one or more artifacts to a different artifact type within the same project.</td>
+  <td>Copy one or more artifacts within the same project.</td>
 </tr>
 <tr valign="top">
   <td><strong>Level:</strong></td>
@@ -23,7 +23,7 @@
 <tr valign="top">
   <td><strong>Success guarantees:</strong></td>
   <td>The following are duplicated in target artifact: shared attributes, Artifact ID, creation date, created by, history, comments, attachments, dependencies, URLs.<br/>
-      Values of unshared attributes in source artifact are entered as an additional comment in the target artifact or deleted.</td>
+      Values of inactive and unshared attributes in source artifact are entered as an additional comment in the target artifact or deleted.</td>
 </tr>
 <tr valign="top">
   <td><strong>Trigger event:</strong></td>
