--- a/www/usemodels/usecases/IssueMoveAndCopy/MoveDifferentModule.html
+++ b/www/usemodels/usecases/IssueMoveAndCopy/MoveDifferentModule.html
@@ -27,7 +27,9 @@
   <td>Artifact is deleted from source project.<br/>
       Artifact exists in the target.<br/>
       The following are unchanged in target artifact: shared attributes, artifact ID, creation date, created by, history, comments, attachments, dependencies, URLs.<br/>
-      All other attributes have been mapped to target artifact attributes or entered as a comment in the target artifact.</td>
+      All other attributes have been mapped to target artifact attributes or entered as a comment in the target artifact.<br/>
+      Users associated to source artifact without required target module permissions are noted as a comment in target artifact.<br/>
+      Users associated to source artifact with required target module permissions are associated appropriately.</td>
 </tr>
 <tr valign="top">
   <td><strong>Trigger event:</strong></td>
@@ -62,6 +64,7 @@
 </tr>
 <tr valign="top">
   <td><strong>Notes and Issues:</strong></td>
-  <td>Only one target project and artifact type pair may be selected.</td>
+  <td>Only one target project and artifact type pair may be selected.<br/>
+  Unshared and inactive attribute values (i.e., those that were originally annotated as comments in the target artifact) are not preserved.</td>
 </tr>
 </table>
