Put a trailing slash on that 'source code' link so we avoid a redirect that happens when the slash is omitted.

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,6 +1,6 @@
 <div><small><a href="/servlets/ProjectMemberList">Membership</a></small></div>
 <div><small><a href="/servlets/ProjectMailingListList">Mailing lists</a></small></div> 
-<div><small><a href="/source/browse/scarab">Source code</a></small></div>
+<div><small><a href="/source/browse/scarab/">Source code</a></small></div>
 <div><small><a href="/issues.html">Issue tracking</a></small></div>
 <div><small><a href="/project_docs.html">Documentation</a></small></div>
 <div><small><a href="/servlets/ProjectDocumentList">Downloads</a></small></div>
