* www/issues.html   Work around a backwards incompatibility in 2.6.0.213 pointed out by   Andreas Guenther.

--- a/www/issues.html
+++ b/www/issues.html
@@ -19,11 +19,12 @@ migration from the old system to the new system quite yet, so please be
 patient.
 </p>
 
-<p>
-If you would like to submit an issue, please <strong>check</strong> the 
-<a href="http://scarab.tigris.org/source/browse/~checkout~/scarab/KNOWN_ISSUES.txt" target="_new">KNOWN_ISSUES.txt</a> 
-file to make sure that we don't already know about an issue that may not necessarily have
-a particular issue the problem is reported against.
+<p> If you would like to submit an issue, please
+<strong>check</strong> the <a
+href="http://scarab.tigris.org/source/browse/scarab/KNOWN_ISSUES.txt?rev=HEAD"
+target="_new">KNOWN_ISSUES.txt</a> file to make sure that we don't
+already know about an issue that may not necessarily have a particular
+issue the problem is reported against.
 </p>
 
 <p>
@@ -49,7 +50,7 @@ please contact <a href="mailto:dlr@collab.net">Daniel Rall</a> and let him know.
 
 <hr noshade="noshade" size="1" />
 
-<h5>$Id: issues.html,v 1.11 2003/05/20 16:19:23 dlr Exp $</h5>
+<h5>$Id: issues.html,v 1.12 2003/09/18 20:27:15 dlr Exp $</h5>
 
 </body>
 </html>
