--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,8 +1,13 @@
-<div><small><a href="/servlets/ProjectMemberList">Membership</a></small></div>
-<div><small><a href="/servlets/ProjectMailingListList">Mailing lists</a></small></div> 
-<div><small><a href="/source/browse/scarab/">Source code</a></small></div>
-<div><small><a href="/issues.html">Issue tracking</a></small></div>
-<div><small><a href="/project_docs.html">Documentation</a></small></div>
-<div><small><a href="/servlets/ProjectDocumentList">Downloads</a></small></div>
-<div><small><a href="/project_status.html">Status</a></small></div>  
-<div><small><a href="/faq.html">FAQ</a></small></div>  
+<div><a href="/servlets/ProjectMemberList">Membership</a></div>
+</div><div class="body">
+<div><a href="/servlets/ProjectNewsList">Announcements</a></div>
+<div><a href="/servlets/ProjectMailingListList">Mailing lists</a></div>
+</div><div class="body">
+<div><a href="/servlets/ProjectDocumentList">Documents &amp; files</a></div>
+<div><a href="/source/browse/scarab/">Version control</a></div>
+</div><div class="body">
+<div><a href="/issues.html">Issue tracker</a></div>
+</div><div class="body">
+<div><a href="/project_docs.html">Documentation</a></div>
+<div><a href="/project_status.html">Status</a></div>  
+<div><a href="/faq.html">FAQ</a></div>  
