updated link as needed for new version of viewcvs after tigris.org upgrade

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.46 2003/08/08 15:49:13 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.47 2003/09/19 04:38:44 jrobbins Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -20,7 +20,7 @@
             <h3>Project documents</h3>
             <ul>
                 <li><a href="faq.html">FREQUENTLY ASKED QUESTIONS</a></li>
-                <li><a href="http://scarab.tigris.org/source/browse/~checkout~/scarab/README.txt">README.txt</a></li>
+                <li><a href="http://scarab.tigris.org/unbranded-source/browse/*checkout*/scarab/README.txt?rev=1">README.txt</a></li>
                 <li><a href="project_status.html">Project Status</a></li>
                 <li><a href="changes.html">ChangeLog</a></li>
                 <li><a href="scarab-design.html">Design Documentation</a></li>
