updated links to fit viewcvs post-upgrade

--- a/www/faq.html
+++ b/www/faq.html
@@ -6,7 +6,7 @@
 <body bgcolor="#ffffff">
 
 <h2>Scarab - Frequently Asked Questions</h2>
-<h4>$Id: faq.html,v 1.25 2003/09/11 15:06:22 jmcnally Exp $</h4>
+<h4>$Id: faq.html,v 1.26 2003/09/19 04:44:59 jrobbins Exp $</h4>
 
 <hr noshade="noshade" size="1" />
 
@@ -18,7 +18,7 @@ idea to use Scarab?</strong>
 
 <p>
 The website and use of Scarab itself are all we currently have.
-Scarab is very easy to <a href="http://scarab.tigris.org/source/browse/~checkout~/scarab/README.txt">install and setup</a>, 
+Scarab is very easy to <a href="http://scarab.tigris.org/unbranded-source/browse/*checkout*/scarab/README.txt?rev=1">install and setup</a>, 
 so it should not take you much time to become comfortable with 
 Scarab so that you can perform your own demonstration.
 </p>
@@ -105,7 +105,7 @@ the upgrade instructions below for more information.
 You may also run into various bugs or missing features within Scarab. It
 is best to first search our <a
 href="http://scarab.tigris.org/issues.html">issue database</a> and <a
-href="http://scarab.tigris.org/source/browse/~checkout~/scarab/KNOWN_ISSUES.txt">KNOWN_ISSUES.txt</a> file to see if we know about the
+href="http://scarab.tigris.org/unbranded-source/browse/*checkout*/scarab/KNOWN_ISSUES.txt?rev=1">KNOWN_ISSUES.txt</a> file to see if we know about the
 issue. If not, please let us know by reporting it to the issue tracker.
 Whatever you do, please don't send it to the mailing lists.
 </p>
@@ -142,7 +142,7 @@ application itself and is available in the left side navigation.</li>
 
 <p>
 From the <a
-href="http://scarab.tigris.org/source/browse/~checkout~/scarab/README.txt">README.txt</a> file:
+href="http://scarab.tigris.org/unbranded-source/browse/*checkout*/scarab/README.txt?rev=1">README.txt</a> file:
 </p>
 
 <p>
