--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.47 2003/09/19 04:38:44 jrobbins Exp $ -->
+<!-- $Id: project_docs.html,v 1.48 2003/09/19 04:44:59 jrobbins Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -29,7 +29,7 @@
                 <li><a href="/nonav/ui/">UI Mockups</a></li>
                 <li><a href="scarabfeaturematrix.html">Feature Matrix</a></li>
                 <li><a href="scarab-schema.html">Database schema</a></li>
-                <li><a href="http://scarab.tigris.org/source/browse/~checkout~/scarab/src/sql/scarab-schema.xml">Database schema 
+                <li><a href="http://scarab.tigris.org/unbranded-source/browse/*checkout*/scarab/src/sql/scarab-schema.xml?rev=1">Database schema 
                     XML definition</a></li>
                 <li><a href="security_considerations.html">Security considerations</a></li>
                 <li><a href="admin-guide.html">Administration Guide</a></li>
@@ -57,7 +57,7 @@
                 <li><a href="database_independence.html">Overview</a></li>
 -->
                 <li>Using Scarab with MySQL (See the <a
-                href="http://scarab.tigris.org/source/browse/~checkout~/scarab/README.txt">README.txt</a> file in the
+                href="http://scarab.tigris.org/unbranded-source/browse/*checkout*/scarab/README.txt?rev=1">README.txt</a> file in the
                 distribution)</li>
                 <li><a href="oracle.html">Using Scarab with Oracle</a></li>
                 <li><a href="postgresql.html">Using Scarab with Postgresql</a></li>
