--- a/www/scarab-schema.html
+++ b/www/scarab-schema.html
@@ -1,4 +1,4 @@
-<!-- $Id: scarab-schema.html,v 1.9 2003/03/19 18:37:26 stack Exp $ -->
+<!-- $Id: scarab-schema.html,v 1.10 2003/09/19 04:44:59 jrobbins Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -21,7 +21,7 @@ An up-to-date html version of the schema is available here:<br>
 </p>
 <p>
 An out-of-date ERD diagram is here:<br>
-<a href="http://scarab.tigris.org/source/browse/~checkout~/scarab/src/sql/scarab-schema-4.0.jpg?rev=1.1&amp;content-type=image/jpeg">Scarab Schema Image</a>
+<a href="http://scarab.tigris.org/unbranded-source/browse/*checkout*/scarab/src/sql/scarab-schema-4.0.jpg?rev=1.1&amp;content-type=image/jpeg">Scarab Schema Image</a>
 </p>
 -->
 
