*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -69,7 +69,9 @@ operations.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43274">43274</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41583">41583</a>
+[misc] Eclipse cannot save or compile files in non-Java project anymore
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43274">43274</a>
 Type hierarchy broken 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38931">38931</a>
 Migrate delta processor to comply to new notification scheme in 3.0
