*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -69,7 +69,9 @@ operations.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41583">41583</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42832">42832</a>
+Cannot get rid of this error even if the compiler settings is ignore for incompatible required binaries
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41583">41583</a>
 [misc] Eclipse cannot save or compile files in non-Java project anymore
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43274">43274</a>
 Type hierarchy broken 
