*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -57,11 +57,11 @@ operations.
 	<li><code>getChildren()</code> on a method, a field or an initializer returns the local or anonymous types defined in this element</li>
 	<li>mementos for these handles are supported</li>
 	<li>open on selection (F3) in a Java editor goes to the local type definition</li>
+	<li>type hierarchies contain anonymous and local types</li>
 	</ul>
 	<p>
 	This doesn't yet include:
 	<ul>
-	<li>type hierarchy on these types</li>
 	<li>search on these types</li>
 	<li>anonymous/local binary types</li>
 	</ul>
