--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37659">37659</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43485">43485</a>
+NPE in SearchEngine
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37659">37659</a>
 [plan item] Improve shared working copies 
 
 <p><hr><h1>
