Added My Issues (Issue 1692).

--- a/www/project_bugs.html
+++ b/www/project_bugs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_bugs.html,v 1.12 2003/08/30 09:36:32 linus Exp $ -->
+<!-- $Id: project_bugs.html,v 1.13 2003/09/23 22:27:19 linus Exp $ -->
 <!-- This is a page describing how to report bugs with quick links. -->
 <!-- Keep in sync with src_new/org/argouml/resource/bugreport.about. -->
 
@@ -111,14 +111,19 @@ the ArgoUML and get it granted.
   </tr>  
  
   <tr>
-    <th><a href="http://argouml.tigris.org/servlets/ProjectIssues">More</a></th>
+    <th><a href="http://argouml.tigris.org/issues/buglist.cgi?cmdtype=runuserdefault">My issues</a></th>
     <td>
-      <form method="get" action="http://argouml.tigris.org/servlets/ProjectIssues">
-      <input type="submit" value="Advanced"/>
-      To do other things with Issuezilla.
-      </form>
+      View both active issues assigned to you and those that you have entered.
+    </td>
+  </tr>  
+
+  <tr>
+    <th><a href="http://argouml.tigris.org/issues/reports.cgi">Reports</a></th>
+    <td>
+      Generate and view issue tracking reports.
     </td>
   </tr>
+
 </table>
 </div>
 
