Tutorial dialog now has a toolbar to start/stop the tutorial.
These actions are now encapsulated as proper Swing actions, with
the buttons tracking their state correctly.

--- a/src/java/org/apache/log4j/chainsaw/help/tutorial.html
+++ b/src/java/org/apache/log4j/chainsaw/help/tutorial.html
@@ -21,7 +21,7 @@ them into Log4j just like a real Receiver.  </p>
 <li><img src="../icons/TipOfTheDay16.gif" alt="Interesting...">If you would like to read more about Receivers first, then click here. <font color="red"><b>(TODO)</b></font></li>
 </ul>
 <hr>
-<p><b>When you are ready to begin the tutorial, <a href="StartTutorial">click here</a>.</b></p>
+<p><b>When you are ready to begin the tutorial, <a href="StartTutorial">click here</a>, or click the "Start Tutorial" button in this dialog's toolbar.</b></p>
 <hr>
 <h2>Receivers</h2>
 <p>After you have said yes to the confirmation dialog, you should see 3 new tabs appear 
@@ -112,7 +112,7 @@ When you are finished with the tutorial, you can simply shutdown all the Generat
 <ul>
 <li><img src="../icons/Help16.gif" alt="Try this...">Show the Receivers panel () and shutdown each of the Generator Receivers by using the <img src="../icons/Stop16.gif" alt="Stop"> icon.</li>
 </ul>
-<p>For convenience you can simply <a href="StopTutorial">click here</a>, and Chainsaw will stop all the tutorial generators for you (If you created any other non-Generator Receivers, they will be left untouched).</p>
+<p>For convenience you can simply <a href="StopTutorial">click here</a> or click on the Stop Tutorial button in this dialogs toolbar, and Chainsaw will stop all the tutorial generators for you (If you created any other non-Generator Receivers, they will be left untouched).</p>
 </p>
 <hr>
 <PRE>Transmission Ends</PRE>
