--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,7 +36,7 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0M4 Build - ?th September 2003
+Eclipse SDK 3.0M4 Build - 24th September 2003
 <br>Project org.eclipse.jdt.core v_372
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_372">cvs</a>).
 <h2>
