--- a/www/project_schedule.html
+++ b/www/project_schedule.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_schedule.html,v 1.76 2003/09/24 06:41:55 linus Exp $ -->
+<!-- $Id: project_schedule.html,v 1.77 2003/09/26 05:36:16 linus Exp $ -->
 <HTML>
 <HEAD>
 	<TITLE>ArgoUML Release Plan</TITLE>
@@ -45,20 +45,26 @@ Planned date: 2003-12
 <li>First non-NS-UML version of ArgoUML runnable.
 </ul>
 
-<h4>ArgoUML release 0.15.5</h4>
+<h4>ArgoUML release 0.16 (alphas and betas to be planned)</h4>
 Planned date: 2004-01
 
-<h4>ArgoUML release 0.15.6</h4>
-Planned date: 2004-02
-
 <h4>ArgoUML release 0.16</h4>
-Planned date: 2004-05
+Planned date: 2004-02
+<ul>
+<li>Last NS-UML version of ArgoUML runnable.
+</ul>
 
 <h4>ArgoUML release 0.17.1</h4>
-Planned date: 2004-07
+Planned date: 2004-03
 <ul>
 <li>NS-UML support dropped.
 </ul>
+
+<h4>ArgoUML release 0.17.2</h4>
+Planned date: 2004-04
+
+<h4>ArgoUML release 0.17.3</h4>
+Planned date: 2004-05
 
 <h3>Made releases</h3>
 
